# Wedding-Photos

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  schema.sql
pages/: gallery.py  main.py  upload.py
pipeline/: clip_classifier.py  storage.py
